@@ -5,13 +5,14 @@ import com.google.gson.JsonParseException;
 import lombok.NonNull;
 import net.minecraft.advancements.Advancement;
 import net.minecraft.advancements.AdvancementProgress;
-import net.minecraft.network.chat.TextComponent;
-import net.minecraft.network.chat.TranslatableComponent;
+import net.minecraft.network.chat.Component;
+import net.minecraft.network.chat.MutableComponent;
 import net.minecraft.resources.ResourceLocation;
 import net.minecraft.server.level.ServerPlayer;
 import net.minecraft.world.effect.MobEffectInstance;
 import net.minecraft.world.entity.item.ItemEntity;
 import net.minecraft.world.item.ItemStack;
+import net.minecraftforge.registries.ForgeRegistries;
 import xin.vanilla.mc.capability.IPlayerSignInData;
 import xin.vanilla.mc.capability.PlayerSignInDataCapability;
 import xin.vanilla.mc.capability.SignInRecord;
@@ -140,16 +141,10 @@ public class RewardManager {
             date = DateUtils.getServerDate();
         }
         // 签到冷却刷新时间, 固定间隔不需要校准时间
-        double cooling;
-        switch (ServerConfig.TIME_COOLING_METHOD.get()) {
-            case MIXED:
-            case FIXED_TIME:
-                cooling = ServerConfig.TIME_COOLING_TIME.get();
-                break;
-            default:
-                cooling = 0;
-                break;
-        }
+        double cooling = switch (ServerConfig.TIME_COOLING_METHOD.get()) {
+            case MIXED, FIXED_TIME -> ServerConfig.TIME_COOLING_TIME.get();
+            default -> 0;
+        };
         // 校准后当前时间
         return DateUtils.addDate(date, -cooling);
     }
@@ -166,16 +161,10 @@ public class RewardManager {
             date = DateUtils.getServerDate();
         }
         // 签到冷却刷新时间, 固定间隔不需要校准时间
-        double cooling;
-        switch (ServerConfig.TIME_COOLING_METHOD.get()) {
-            case MIXED:
-            case FIXED_TIME:
-                cooling = ServerConfig.TIME_COOLING_TIME.get();
-                break;
-            default:
-                cooling = 0;
-                break;
-        }
+        double cooling = switch (ServerConfig.TIME_COOLING_METHOD.get()) {
+            case MIXED, FIXED_TIME -> ServerConfig.TIME_COOLING_TIME.get();
+            default -> 0;
+        };
         // 校准后当前时间
         return DateUtils.addDate(date, -cooling);
     }
@@ -268,7 +257,7 @@ public class RewardManager {
                     //     reward.setRewarded(true);
                     //     reward.setDisabled(true);
                     // })
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         // 若签到记录存在，则添加签到奖励记录
@@ -301,7 +290,7 @@ public class RewardManager {
                     .distinct()
                     .map(serverData.getDateTimeRewards()::get)
                     .flatMap(Collection::stream)
-                    .collect(Collectors.toList());
+                    .toList();
             if (!CollectionUtils.isNullOrEmpty(dateTimeRewards)) result.addAll(dateTimeRewards);
             // 累计签到奖励
             result.addAll(serverData.getCumulativeRewards().getOrDefault(String.valueOf(playerData.getTotalSignInDays() + 1), new RewardList()));
@@ -351,14 +340,14 @@ public class RewardManager {
                             switch (type) {
                                 case ITEM:
                                     ItemStack itemStack = RewardManager.deserializeReward(reward);
-                                    key = itemStack.getItem().getRegistryName().toString();
+                                    key = ForgeRegistries.ITEMS.getKey(itemStack.getItem()).toString();
                                     if (itemStack.hasTag()) {
                                         key += itemStack.getTag().toString();
                                     }
                                     break;
                                 case EFFECT:
                                     MobEffectInstance mobEffectInstance = RewardManager.deserializeReward(reward);
-                                    key = mobEffectInstance.getEffect().getRegistryName().toString() + " " + mobEffectInstance.getAmplifier();
+                                    key = ForgeRegistries.MOB_EFFECTS.getKey(mobEffectInstance.getEffect()).toString() + " " + mobEffectInstance.getAmplifier();
                                     break;
                                 case EXP_POINT:
                                     break;
@@ -441,50 +430,50 @@ public class RewardManager {
             if (ESignInType.SIGN_IN.equals(packet.getSignInType())
                     && (coolingMethod.equals(ETimeCoolingMethod.FIXED_TIME) || coolingMethod.equals(ETimeCoolingMethod.MIXED))
                     && DateUtils.equals(serverDate, packet.getSignInTime(), DateUtils.DateUnit.MINUTE)) {
-                player.sendMessage(new TranslatableComponent(getI18nKey("要到今天的%05.2f后才能签到哦"), ServerConfig.TIME_COOLING_TIME.get()), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("要到今天的%05.2f后才能签到哦"), ServerConfig.TIME_COOLING_TIME.get()));
             } else {
-                player.sendMessage(new TranslatableComponent(getI18nKey("签到日期晚于服务器当前日期，签到失败")), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("签到日期晚于服务器当前日期，签到失败")));
             }
             return;
         } else if (ESignInType.SIGN_IN.equals(packet.getSignInType()) && serverCompensateDateInt > signInDateInt) {
             if (!((coolingMethod.equals(ETimeCoolingMethod.FIXED_TIME) || coolingMethod.equals(ETimeCoolingMethod.MIXED))
                     && DateUtils.equals(serverDate, packet.getSignInTime(), DateUtils.DateUnit.MINUTE))) {
-                player.sendMessage(new TranslatableComponent(getI18nKey("签到日期早于服务器当前日期，签到失败")), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("签到日期早于服务器当前日期，签到失败")));
                 return;
             }
         } else if (ESignInType.RE_SIGN_IN.equals(packet.getSignInType()) && serverCompensateDateInt <= signInDateInt) {
-            player.sendMessage(new TranslatableComponent(getI18nKey("补签日期不早于服务器当前日期，补签失败")), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("补签日期不早于服务器当前日期，补签失败")));
             return;
         } else if (ESignInType.SIGN_IN.equals(packet.getSignInType()) && serverCompensateDateInt == DateUtils.toDateInt(signInData.getLastSignInTime())) {
-            player.sendMessage(new TranslatableComponent(getI18nKey("已经签过到了哦")), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("已经签过到了哦")));
             return;
         }
         // 判断签到CD
         if (ESignInType.SIGN_IN.equals(packet.getSignInType()) && coolingMethod.getCode() >= ETimeCoolingMethod.FIXED_INTERVAL.getCode()) {
             Date lastSignInTime = DateUtils.addDate(signInData.getLastSignInTime(), ServerConfig.TIME_COOLING_INTERVAL.get());
             if (packet.getSignInTime().before(lastSignInTime)) {
-                player.sendMessage(new TranslatableComponent(getI18nKey("签到冷却中，签到失败，请稍后再试")), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("签到冷却中，签到失败，请稍后再试")));
                 return;
             }
         }
         // 判断补签
         if (ESignInType.RE_SIGN_IN.equals(packet.getSignInType()) && !ServerConfig.SIGN_IN_CARD.get()) {
-            player.sendMessage(new TranslatableComponent(getI18nKey("服务器未开启补签功能，补签失败")), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("服务器未开启补签功能，补签失败")));
             return;
         } else if (ESignInType.RE_SIGN_IN.equals(packet.getSignInType()) && signInData.getSignInCard() <= 0) {
-            player.sendMessage(new TranslatableComponent(getI18nKey("补签卡不足，补签失败")), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("补签卡不足，补签失败")));
             return;
         } else if (ESignInType.RE_SIGN_IN.equals(packet.getSignInType()) && isSignedIn(signInData, packet.getSignInTime(), false)) {
-            player.sendMessage(new TranslatableComponent(getI18nKey("已经签过到了哦")), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("已经签过到了哦")));
             return;
         }
         // 判断领取奖励
         if (ESignInType.REWARD.equals(packet.getSignInType())) {
             if (isRewarded(signInData, packet.getSignInTime(), false)) {
-                player.sendMessage(new TranslatableComponent(getI18nKey("%s的奖励已经领取过啦"), DateUtils.toString(packet.getSignInTime())), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("%s的奖励已经领取过啦"), DateUtils.toString(packet.getSignInTime())));
                 return;
             } else if (!isSignedIn(signInData, packet.getSignInTime(), false)) {
-                player.sendMessage(new TranslatableComponent(getI18nKey("没有查询到[%s]的签到记录哦，鉴定为阁下没有签到！"), DateUtils.toString(packet.getSignInTime())), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("没有查询到[%s]的签到记录哦，鉴定为阁下没有签到！"), DateUtils.toString(packet.getSignInTime())));
                 return;
             } else {
                 signInData.getSignInRecords().stream()
@@ -504,7 +493,7 @@ public class RewardManager {
                                         giveRewardToPlayer(player, signInData, reward);
                                     });
                         });
-                player.sendMessage(new TranslatableComponent(getI18nKey("奖励领取成功")), player.getUUID());
+                player.sendSystemMessage(Component.translatable(getI18nKey("奖励领取成功")));
             }
         }
         // 签到/补签
@@ -534,7 +523,7 @@ public class RewardManager {
             signInData.getSignInRecords().add(signInRecord);
             signInData.setContinuousSignInDays(DateUtils.calculateContinuousDays(signInData.getSignInRecords().stream().map(SignInRecord::getCompensateTime).collect(Collectors.toList()), serverCompensateDate));
             signInData.plusTotalSignInDays();
-            player.sendMessage(new TranslatableComponent(getI18nKey("签到成功, %s/%s"), signInData.getContinuousSignInDays(), getTotalSignInDays(signInData)), player.getUUID());
+            player.sendSystemMessage(Component.translatable(getI18nKey("签到成功, %s/%s"), signInData.getContinuousSignInDays(), getTotalSignInDays(signInData)));
         }
         // PlayerSignInDataCapability.setData(player, signInData);
         signInData.save(player);
@@ -569,13 +558,13 @@ public class RewardManager {
                 }
                 break;
             case MESSAGE:
-                player.sendMessage((TextComponent) object, player.getUUID());
+                player.sendSystemMessage((MutableComponent) object);
                 break;
             case COMMAND:
                 String command = (String) object;
                 command = command.replaceAll("@s", player.getName().getString());
                 if (StringUtils.isNotNullOrEmpty(command)) {
-                    player.server.getCommands().performCommand(player.createCommandSourceStack().withSuppressedOutput().withPermission(2), command);
+                    player.server.getCommands().performPrefixedCommand(player.createCommandSourceStack().withSuppressedOutput().withPermission(2), command);
                 }
                 break;
             default:
